test/tests/compiler/9_functions/valid/no_arguments/forward_decl.plx
pub fn foo(none) i32;

pub fn main(none) i32 {
    return foo()
}

pub fn foo(none) i32 {
    return 3
}
