test/tests/compiler/9_functions/invalid_types/extra_credit/postfix_incr_fun_name.plx
pub fn x(none) i32;

pub fn main(none) i32 {
    x++
    return 0
}
